[Fix] mysql로 dmg 패키징되는 문제 해결